@@ -52,7 +52,7 @@ Q ?= @ # be quiet
 CC = sdcc
 LINKER = gplink
 TARGETPIC = 16f877
-CFLAGS = -I ../../device/include/pic -mpic14 -c -pp$(TARGETPIC)
+CFLAGS = -Wl,--map -I ../../device/include/pic -mpic14 -pp$(TARGETPIC)
 
 .SUFFIXES: .asm .c .cod .stc
 
@@ -72,6 +72,7 @@ SRC = b.c \
 	add3.c \
 	and1.c \
 	and2.c \
+	b.c \
 	bool1.c \
 	bool2.c \
 	bool3.c \
@@ -83,8 +84,11 @@ SRC = b.c \
 	compare5.c \
 	compare6.c \
 	for.c \
+	inline.c \
 	nestfor.c \
 	or1.c \
+	ptrarg.c \
+	ptrfunc.c \
 	rotate1.c \
 	rotate2.c \
 	rotate3.c \
@@ -94,11 +98,21 @@ SRC = b.c \
 	sub2.c \
 	switch1.c \
 	while.c \
-	xor.c \
-	ptrfunc.c
-
+	xor.c
+#	arrays.c \
+#	add4.c \
+#	bank1.c \
+#	compare7.c \
+#	compare8.c \
+#	compare9.c \
+#	compare10.c \
+#	configword.c \
+#	mult1.c \
+#	pointer1.c \
+#	rotate6.c \
+#	rotate7.c \
+#	string1.c \
 #	struct1.c \
-#	mul1.c \
 
 COD := $(patsubst %.c, %.cod, $(SRC))
 ASM := $(patsubst %.c, %.asm, $(SRC))
@@ -111,19 +125,9 @@ MAP := $(patsubst %.c, %.map, $(SRC))
 all:	test
 
 
-# The asm files are generated by sdcc
-.c.o:
-	$(Q)$(CC) $(CFLAGS)  $*.c
-
-# The .cod files are generated by gpasm
-# these get loaded by gpsim.
-.o.cod:
-	$(Q)$(LINKER) --map -c -o $*.o $*.o
-
-#	gpasm $*.asm
-
-#	gpasm -c -I $(HEADER) $*.asm
-
+# The cod files are generated by sdcc
+.c.cod:
+	$(Q)$(CC) $(CFLAGS) $*.c
 
 # The .stc files are script files for gpsim
 .cod.stc:
